# Poseagile_BFS_app

./: .gitignore  ACV_Part2.ipynb  README.md  app.py  pyproject.toml  requirements.txt  yoga.py
PoseClassification/: visualize.py
hello_app/: main.py
yoga_app/: app.py  yoga.py
yoga_app/PoseClassification/: visualize.py
yoga_app/yoga_poses/: goddess.csv  repos.csv  tree.csv  warrior2.csv
yoga_poses/: downdog.csv  warrior2.csv
