[project]
name = "hello-app"
version = "0.1.0"
description = "A simple app"
authors = [
    {name = "Poseagile",email = "dmitrii.druzhbin@le-campus-numerique.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]

[tool.poetry.scripts]
hello-app = "hello_app.main:say_hello"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
